[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "support-env"
version = "2.0.0"
authors = [
  { name="Hackathon Team" },
]
description = "SupportEnv is a dynamic, reproducible, stateful AgentOps benchmark for evaluating LLM agents on multi-step customer support workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.0.0",
    "pytest>=7.4.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "supabase>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server.app:main"

[project.urls]
"Homepage" = "https://github.com/Rhythm280/Support-ENV-Project"
